# pong

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt
api/: Account.js
cli_client/: CMakeLists.txt  conanfile.txt
cli_client/src/: Client.cpp  Client.hpp  import.hpp  main.cpp  structure.hpp
components/: GameLocal.js  GameRender.js
components/lobby/: RoomList.js
core/: App.js  Component.js  Router.js
data/db/: postmaster.pid
django/: Dockerfile  docker-entrypoint.sh
django/requirements/: base.txt  requirements.txt  requirements_dev.txt  requirements_origin.txt  requirements_prod.txt  requirements_prod_origin2.txt  requirements_prod_origin3.txt  requirements_prod_origin4.txt
django/source/: db.sqlite3
nginx/: Dockerfile
nginx/conf/: default.conf
nginx/ssl/: server.crt  server.key
pages/: Background.js  index.js  tmp.js  ttmp.js
pages/enter/: ConnectionType.js  GameType.js  GameTypePage.js  LocalGamePage.js  StartPage.js
pages/game/: AIGame.js  Game.js  GameAI.js  GameTournament.js  GameUtils.js  ModeTournament.js  SetPlayerNum.js  TournamentGame.js
pages/lobby/: LobbyPage.js
pages/local/: LocalTournamentPage.js
pages/setting/: SetPlayerNum.js
postgres/: Dockerfile
postgres/data/: postmaster.pid
source/: db.sqlite3
source/oauth/: views.py
source/pong/: PongServer.py  consumer.py  physics.py  routing.py  views.py
source/source/: asgi.py  settings.py  urls.py
source_origin/: db.sqlite3
style/: Game.css  Home.css
venv_youjeong/: pyvenv.cfg
(+226 files in other folders)
